Implement login panel

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -149,6 +149,7 @@
           "-I${workspaceFolder}/dep/linux/linux_lib/lib/wx/include/gtk3-unicode-static-3.2",
           "-I${workspaceFolder}/dep/linux/include",
           "-I${workspaceFolder}/include",
+          "-I${workspaceFolder}/include/panels",
           "-I/usr/include/gtk-3.0",
           "-I/usr/include/at-spi2-atk/2.0",
           "-I/usr/include/at-spi-2.0",
@@ -207,6 +208,7 @@
           "-I${workspaceFolder}\\dep\\win\\lib\\gcc_lib\\mswu",
           "-I${workspaceFolder}\\dep\\win\\include",
           "-I${workspaceFolder}\\include",
+          "-I${workspaceFolder}/include/panels",
           "-c",
           "$(",
           "dir",
