--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -83,7 +83,8 @@
           "-lz",
           "-lpthread",
           "-liconv",
-          "-llzma"
+          "-llzma",
+          "-std=c++11"
         ]
       },
       "windows": {
@@ -171,7 +172,8 @@
           "-I/usr/include/glib-2.0",
           "-I/usr/lib/x86_64-linux-gnu/glib-2.0/include",
           "-I/usr/include/gtk-3.0/unix-print",
-          "-Wall"
+          "-Wall",
+          "-std=c++11"
         ]
       },
       "osx": {
@@ -208,6 +210,7 @@
           "-I${workspaceFolder}\\dep\\win\\include",
           "-I${workspaceFolder}\\include",
           "-I${workspaceFolder}/include/panels",
+          
           "-c",
           "$(",
           "dir",
@@ -225,7 +228,8 @@
           "-D_UNICODE",
           "-D__WXMSW__",
           "-DNDEBUG",
-          "-DNOPCH"
+          "-DNOPCH",
+          "-std=c++11"
         ]
       },
       "options": {
