--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,38 @@
                 }
             ],
             "preLaunchTask": "Compile & Link"
+        },
+        {
+            "name": "Launch Without Compiling",
+            "type": "cppdbg",
+            "request": "launch",
+            "linux": {
+                "program": "${workspaceRoot}/out/myapp",
+                "MIMode": "gdb",
+                "miDebuggerPath": "/usr/bin/gdb"
+            },
+            "osx": {
+                "program": "${workspaceRoot}/out/myapp",
+                "MIMode": "lldb"
+            },
+            "windows": {
+                "program": "${workspaceRoot}\\out\\myapp.exe",
+                "MIMode": "gdb",
+                "miDebuggerPath": "C:\\msys64\\ucrt64\\bin\\gdb.exe"
+            },  
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/out",
+            "program": "${workspaceFolder}/out/myapp",
+            "environment": [],
+            "externalConsole": false,
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            // "preLaunchTask": "Compile & Link"
         }
     ]
 }
