--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "Compile & Link"
+            "preLaunchTask": "Run mingw32-make"
         },
         {
             "name": "Launch Without Compiling",
