Fix leave panel combo box initialization and update build task to link

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -268,7 +268,7 @@
       "type": "shell",
       "label": "Run mingw32-make",
       "command": "mingw32-make",
-      "args": ["compile", "-j", "10"],
+      "args": ["link", "-j", "10"],
       "options": {
         "cwd": "${workspaceFolder}"
       },
